force-app/main/default/objects/vlocity_cmt__AccountHold__c/vlocity_cmt__AccountHold__c.object-meta.xml
<CustomObject>
    <description>Describes a hold to payments on an Account record.</description>
    <label>Account Hold</label>
    <nameField>
        <label>Account Payment Hold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>