force-app/main/default/objects/vlocity_cmt__AccountHold__c/fields/vlocity_cmt__AssetId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the Asset that is suspended.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Account Holds</relationshipLabel>
    <relationshipName>AccountHolds</relationshipName>
    <type>Lookup</type>
</CustomField>