force-app/main/default/objects/vlocity_cmt__AccountHold__c/fields/vlocity_cmt__DunningId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DunningId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the customer collections activity that is relevant to this hold.</description>
    <label>Collections Activity</label>
    <referenceTo>vlocity_cmt__Dunning__c</referenceTo>
    <relationshipLabel>Account Holds</relationshipLabel>
    <relationshipName>AccountHolds</relationshipName>
    <type>Lookup</type>
</CustomField>