force-app/main/default/objects/vlocity_cmt__AccountHold__c/fields/vlocity_cmt__HoldEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HoldEndDate__c</fullName>
    <description>The date/time until when the hold is effective.</description>
    <label>Hold To</label>
    <type>DateTime</type>
</CustomField>