force-app/main/default/objects/vlocity_cmt__AccountHold__c/fields/vlocity_cmt__HoldStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HoldStartDate__c</fullName>
    <description>The date/time from when the hold is effective.</description>
    <label>Hold From</label>
    <type>DateTime</type>
</CustomField>