force-app/main/default/objects/vlocity_cmt__AccountHold__c/fields/vlocity_cmt__HoldType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HoldType__c</fullName>
    <description>Indicates the type of hold placed on the account or subscription. The hold type differentiates which business processes are restricted.</description>
    <label>Hold Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Payment</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Customer Initiated</fullName>
            </value>
            <value>
                <fullName>Company Initiated</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>