force-app/main/default/objects/vlocity_cmt__AccountHold__c/fields/vlocity_cmt__Reason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Reason__c</fullName>
    <description>Captures the reason for suspension of the entity which can be asset, subscription, order or account.</description>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Fraud Detected</fullName>
            </value>
            <value>
                <fullName>SIM Lost or Stolen</fullName>
            </value>
            <value>
                <fullName>Fraud Reported</fullName>
            </value>
            <value>
                <fullName>Out of Country</fullName>
            </value>
            <value>
                <fullName>Billing Dispute</fullName>
            </value>
            <value>
                <fullName>MSISDN Recycling</fullName>
            </value>
            <value>
                <fullName>Port Out In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>